# velocity-hub

./: LICENSE  README.md
velocity_mjlab/: README.md  pyproject.toml
velocity_mjlab/assets/robots/anymal_c/: c_constants.py
velocity_mjlab/assets/robots/booster_t1/: __init__.py  t1_constants.py
velocity_mjlab/assets/robots/duck_mini/: __init__.py  duck_mini_constants.py
velocity_mjlab/assets/robots/humanoid/: __init__.py  humanoid_constants.py
velocity_mjlab/assets/robots/kbot/: __init__.py  kbot_constants.py
velocity_mjlab/assets/robots/quadruped/: __init__.py  quadruped_constants.py
velocity_mjlab/assets/robots/spot/: __init__.py  spot_constants.py
velocity_mjlab/assets/robots/unitree_h1/: __init__.py  h1_constants.py
velocity_mjlab/assets/robots/zbot/: zbot_constants.py
velocity_mjlab/scripts/: play.py  train.py
velocity_mjlab/tasks/velocity/config/: __init__.py
velocity_mujoco_playground/: README.md  pyproject.toml
velocity_mujoco_playground/main/: play.py  registry.py  train.py
velocity_mujoco_playground/models/velocity_anymal_c/: model
velocity_mujoco_playground/models/velocity_duck_mini/: model
velocity_mujoco_playground/models/velocity_h1/: model
velocity_mujoco_playground/models/velocity_humanoid/: model
velocity_mujoco_playground/models/velocity_kbot/: model
velocity_mujoco_playground/models/velocity_quadruped/: model
velocity_mujoco_playground/models/velocity_spot/: model
velocity_mujoco_playground/models/velocity_t1/: model
velocity_mujoco_playground/models/velocity_zbot/: model
(+167 files in other folders)
