[project]
name = "velocity-mjlab"
version = "0.1.0"
description = "Reinforcement learning environments for training bipeds and quadrupeds to follow velocity commands using mjlab"
requires-python = ">=3.11"
dependencies = [
    "mjlab>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tasks", "assets", "scripts"]

[project.scripts]
train = "scripts.train:main"
play = "scripts.play:main"

[project.entry-points."mjlab.tasks"]
velocity_mjlab = "tasks.velocity.config"
