[project]
name = "velocity-mujoco-playground"
version = "0.1.0"
description = "Reinforcement learning environments for training bipeds and quadrupeds to follow velocity commands using MuJoCo Playground"
requires-python = ">=3.11"
dependencies = [
    "glfw>=2.10.0",
    "jax[cuda12]>=0.9.2",
    "playground>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["main"]

[project.scripts]
train = "main.train:cli"
play = "main.play:cli"
